--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,10 @@
+[target.x86_64-unknown-linux-musl]
+linker = "zig"
+rustflags = ["-C", "link-arg=-target", "-C", "link-arg=x86_64-linux-musl"]
 
-[target.x86_64-unknown-linux-gnu]
-linker = "x86_64-unknown-linux-gnu-gcc"
+[profile.release]
+opt-level = "z"
+lto = true
+strip = true
+codegen-units = 1
+panic = "abort"
