--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-[target.x86_64-unknown-linux-musl.release]
-linker = "zig"
-rustflags = ["-C", "link-arg=-target", "-C", "link-arg=x86_64-linux-musl"]
-
-[profile.release]
-opt-level = "z"
-lto = true
-strip = true
-codegen-units = 1
-panic = "abort"
+# [target.x86_64-unknown-linux-musl.release]
+# linker = "zig"
+# rustflags = ["-C", "link-arg=-target", "-C", "link-arg=x86_64-linux-musl"]
+#
+# [profile.release]
+# opt-level = "z"
+# lto = true
+# strip = true
+# codegen-units = 1
+# panic = "abort"
