--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel = "stable"
-targets = ["x86_64-unknown-linux-musl"]
-profile = "minimal"
+# targets = ["x86_64-unknown-linux-musl"]
+# profile = "minimal"
